kubernetes/apps/flux-system/flux-ui/app/securitypolicy-oidc.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: flux-web-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-web
  oidc:
    provider:
      issuer: https://authentik.${SECRET_DOMAIN}/application/o/cluster-dashboards/
    clientIDRef:
      name: authentik-dashboards-oidc
    clientSecret:
      name: authentik-dashboards-oidc
    scopes:
      - openid
      - email
      - profile
      - offline_access
    redirectURL: https://gitops.${SECRET_DOMAIN}/oauth2/callback
    logoutPath: /logout
    denyRedirect:
      headers:
        - name: Sec-Fetch-Mode
          type: RegularExpression
          value: "^(cors|no-cors|same-origin|websocket)$"
    defaultTokenTTL: 12h
    defaultRefreshTokenTTL: 168h
    cookieConfig:
      sameSite: Lax
